<resources>
    <string name="app_name">Mitchell</string>
    <string name="title_activity_login">Mitchell e Hijos</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Ingresar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Bienvenid@!!!"</string>
    <string name="invalid_username">Usuari@ es incorrect@</string>
    <string name="invalid_password">La Contraseña debe ser mayor de 2 caracteres</string>
    <string name="login_failed">"Contraseña es Incorrecto"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_inicio">Inicio</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_inmueble">Inmuebles</string>
    <string name="menu_inquilino">Inquilinos</string>
    <string name="menu_contrato">Contratos</string>
    <string name="menu_logout">Logout</string>
    <string name="nombre_y_apellido">Nombre y Apellido</string>
    <string name="correo_electronico">Correo Electronico</string>
    <string name="inmueble_detalle" />
    <string name="inmueble_item" />
    <string name="inquilino_item" />
    <string name="contrato_item" />
    <string name="contrato_detalle_item" />
    <string name="pago_item">Pago</string>
</resources>