<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:icon="@drawable/icon_home"
            android:title="@string/menu_inicio" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/icon_perfil"
            android:title="@string/menu_perfil" />
        <item
            android:id="@+id/nav_inmueble"
            android:icon="@drawable/icon_inmu"
            android:title="@string/menu_inmueble" />

        <item
            android:id="@+id/nav_inquilino"
            android:icon="@drawable/icon_inquilino"
            android:title="@string/menu_inquilino" />
        <item
            android:id="@+id/nav_contrato"
            android:icon="@drawable/icon_contratos"
            android:title="@string/menu_contrato" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/icon_logout"
            android:title="@string/menu_logout"
            android:onClick="logout"/>

    </group>
</menu>