<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_inicio">

    <fragment
        android:id="@+id/nav_inicio"
        android:name="com.example.plantilla.ui.inicio.InicioFragment"
        android:label="@string/menu_inicio"
        tools:layout="@layout/fragment_inicio" />

    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.example.plantilla.ui.perfil.PerfilFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_perfil" />

    <fragment
        android:id="@+id/nav_inmueble"
        android:name="com.example.plantilla.ui.inmueble.InmuebleFragment"
        android:label="@string/menu_inmueble"
        tools:layout="@layout/fragment_inmueble" >
        <action
            android:id="@+id/action_nav_inmueble_to_nav_inmueble_item"
            app:destination="@id/nav_inmueble_item" />
    </fragment>

    <fragment
        android:id="@+id/nav_inquilino"
        android:name="com.example.plantilla.ui.inquilino.InquilinoFragment"
        android:label="@string/menu_inquilino"
        tools:layout="@layout/inquilino_fragment" >
        <action
            android:id="@+id/action_nav_inquilino_to_nav_inquilino_item"
            app:destination="@id/nav_inquilino_item" />
    </fragment>

    <fragment
        android:id="@+id/nav_contrato"
        android:name="com.example.plantilla.ui.contrato.ContratoFragment"
        android:label="@string/menu_contrato"
        tools:layout="@layout/contrato_fragment" >
        <action
            android:id="@+id/action_nav_contrato_to_nav_contrato_item"
            app:destination="@id/nav_contrato_item" />
    </fragment>

    <fragment
        android:id="@+id/nav_inmueble_detalle"
        android:name="com.example.plantilla.ui.inmueble.InmuebleDetalleFragment"
        android:label="@string/inmueble_detalle"
        tools:layout="@layout/inmueble_detalle_fragment" >
        <action
            android:id="@+id/action_nav_inmueble_detalle_to_nav_inmueble_item"
            app:destination="@id/nav_inmueble_item" />
    </fragment>

    <fragment
        android:id="@+id/nav_inmueble_item"
        android:name="com.example.plantilla.ui.inmueble.InmuebleFragment"
        android:label="@string/inmueble_item"
        tools:layout="@layout/inmueble_item" >
        <action
            android:id="@+id/action_nav_inmueble_item_to_nav_inmueble_detalle"
            app:destination="@id/nav_inmueble_detalle" />
    </fragment>

    <fragment
        android:id="@+id/nav_inquilino_item"
        android:name="com.example.plantilla.ui.inquilino.InquilinoFragment"
        android:label="@string/inquilino_item"
        tools:layout="@layout/inquilino_item" >
        <action
            android:id="@+id/action_nav_inquilino_item_to_nav_inquilino_detalle"
            app:destination="@id/nav_inquilino_detalle" />
    </fragment>

    <fragment
        android:id="@+id/nav_inquilino_detalle"
        android:name="com.example.plantilla.ui.inquilino.InquilinoDetalleFragment"
        android:label="@string/inquilino_item"
        tools:layout="@layout/inquilino_detalle_fragment" >

        <action
            android:id="@+id/action_nav_inquilino_detalle_to_nav_inquilino_item"
            app:destination="@id/nav_inquilino_item" />
    </fragment>

    <fragment
        android:id="@+id/nav_contrato_item"
        android:name="com.example.plantilla.ui.contrato.ContratoFragment"
        android:label="@string/contrato_item"
        tools:layout="@layout/contrato_fragment" >
        <action
            android:id="@+id/action_nav_contrato_item_to_nav_contrato_detalle"
            app:destination="@id/nav_contrato_detalle" />
    </fragment>

    <fragment
        android:id="@+id/nav_contrato_detalle"
        android:name="com.example.plantilla.ui.contrato.ContratoDetalleFragment"
        android:label="@string/contrato_detalle_item"
        tools:layout="@layout/inquilino_detalle_fragment" >
        <action
            android:id="@+id/action_nav_contrato_detalle_to_nav_contrato_item"
            app:destination="@id/nav_contrato_item" />
    </fragment>
    <!--<fragment
        android:id="@+id/nav_logout"
        android:name="com.example.plantilla.ui.logout.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/logout_fragment" /> -->
</navigation>